--- a/JURANI/app/src/main/AndroidManifest.xml
+++ b/JURANI/app/src/main/AndroidManifest.xml
@@ -115,6 +115,16 @@
 
             </intent-filter>
         </activity>
+        <!-- Random Activity-->
+        <activity
+            android:name=".RandomTaskActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
